<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="medialive_microphone">Microphone</string>
    <string name="medialive_information">Information</string>
    <string name="medialive_flash_light">Flash</string>
    <string name="medialive_landscape">Landscape</string>
    <string name="medialive_camera_flip">Flip</string>
    <string name="medialive_start_push">Start Live Streaming.</string>
    <string name="medialive_setting">Settings</string>
    <string name="medialive_add_replace_remove">Click Add/Switch/Delete Picture</string>
    <string name="medialive_choose_pic">Select image</string>
    <string name="medialive_remove_pic">Delete image</string>
    <string name="medialive_replace_pic">Replace image</string>
    <string name="medialive_camera">Camera</string>
    <string name="medialive_voice_darkframe">Audio + Black Frame/Picture</string>
    <string name="medialive_screen_capture">Screen</string>
    <string name="medialive_video_file">Video file</string>
    <string name="medialive_preparing">Resource is preparing…</string>
    <string name="medialive_load_completed">Resource loading completed</string>
    <string name="medialive_unsupported_mode">Unsupported mode</string>
    <string name="medialive_camera_flip_unsupported">Flip camera is not supported.</string>
    <string name="medialive_not_support_flashlight">Camera does not support flashlight</string>
    <string name="medialive_permission_denied">Authorization failed.</string>
    <string name="medialive_permission_granted">Authorization successful.</string>
    <string name="medialive_video_title">Video settings</string>
    <string name="medialive_callback_info">Callback record</string>
    <string name="medialive_cycle_info">Periodic information</string>
    <string name="medialive_log">Log</string>
    <string name="medialive_audio_echo_not_supported">Current device does not support hardware earphone monitor</string>
    <string name="medialive_sei_send">Send</string>
    <string name="medialive_sei_puase">Pause</string>
    <string name="medialive_intercept">Screenshot</string>
    <string name="medialive_starting_foreground_service">Starting the foreground service. Try again later.</string>
    <string name="medialive_input_push_address">Please enter or scan the code to enter the streaming address.</string>
    <string name="medialive_setting_capture_resolution">Video capture resolution</string>
    <string name="medialive_setting_encode_resolution">Video encoding resolution</string>
    <string name="medialive_setting_capture_fps">Video capture frame rate</string>
    <string name="medialive_setting_encode_fps">Video encode frame rate</string>
    <string name="medialive_setting_audio_sample_rate">Audio sample rate</string>
    <string name="medialive_select_audio_track">Select audio</string>
    <string name="medialive_select_video">Select video</string>
    <string name="medialive_video_frame_format">Video Frame Format</string>
    <string name="medialive_video_frame_buffer">Video Frame Buffer</string>
    <string name="medialive_video_frame_format_buffer_combination_invalid">The selected video frame format and buffer combination is invalid or not currently supported!</string>
    <string name="medialive_audio_mixing_xxx">Audio mixed stream %1$d</string>
    <string name="medialive_video_mixing_xxx">Video mixed stream %1$d</string>
    <string name="medialive_setting_render_mode">Preview Fill Mode</string>
    <string name="medialive_sei_placeholder">Please enter or scan the code to enter the information.</string>
    <string name="medialive_record_title">Record live stream</string>
    <string name="medialive_record_resolution">Recording resolution</string>
    <string name="medialive_record_fps">Recording frame rate</string>
    <string name="medialive_record_bitrate">Recording bitrate</string>
    <string name="medialive_screen_snapshot">Screenshot</string>
    <string name="medialive_mirror_title">Mirror settings</string>
    <string name="medialive_mirror_capture">Capture mirror</string>
    <string name="medialive_mirror_preview">Local preview image</string>
    <string name="medialive_mirror_push">Streaming mirror</string>
    <string name="medialive_audio_title">Audio Settings</string>
    <string name="medialive_audio_loudness">Audio loudness</string>
    <string name="medialive_audio_echo">Hardware earphone monitor</string>
    <string name="medialive_custom_sei">Custom SEI</string>
    <string name="medialive_mixing_position">Mixed stream position</string>
    <string name="medialive_mixing_position_left">Left</string>
    <string name="medialive_mixing_position_right">Right</string>
    <string name="medialive_mixing_position_top">Up</string>
    <string name="medialive_mixing_position_bottom">Down</string>
    <string name="medialive_mixing_transparency">Transparency</string>
    <string name="medialive_error_file_not_exist">Error: The file does not exist</string>
    <string name="medialive_picture_mixing">Image mixed stream.</string>
    <string name="medialive_cancel">Cancel</string>
    <string name="medialive_confirm">Confirm</string>
    <string name="medialive_whether_download">Whether to download</string>
    <string name="medialive_download_failed_toast">Download failed</string>
    <string name="medialive_download_filename_size">File: %1$s(%2$.2fMB)</string>
    <string name="medialive_xxx_download_failed_toast">%s download failed</string>
    <string name="medialive_download_success_toast">Download success</string>
    <string name="medialive_downloaded">Download complete</string>
    <string name="medialive_xxx_downloading">File %s downloading…</string>
    <string name="medialive_effect">Beauty</string>

    <string name="not_support_beauty_error">The open source code does not support beauty-related functions, please download Demo to experience the effect.</string>
</resources>