<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/live_shape_basic_item_r14"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="24dp"
        android:text="@string/medialive_mirror_title"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/capture_mirror"
        style="@style/LiveSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:minHeight="24dp"
        android:text="@string/medialive_mirror_capture"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/preview_mirror"
        style="@style/LiveSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:minHeight="24dp"
        android:text="@string/medialive_mirror_preview"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/stream_mirror"
        style="@style/LiveSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:minHeight="24dp"
        android:text="@string/medialive_mirror_push"
        android:textColor="@color/white"
        android:textSize="15sp" />
</LinearLayout>