<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/live_shape_basic_item_r14"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="24dp"
        android:text="@string/medialive_audio_title"
        android:textColor="@color/white"
        android:textSize="15sp"  />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="24dp"
            android:text="@string/medialive_audio_loudness"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <SeekBar
            android:id="@+id/audio_loudness"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="100"
            android:min="0"
            tools:progress="50" />
    </LinearLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/hardware_earphone_monitor"
        style="@style/LiveSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:minHeight="24dp"
        android:text="@string/medialive_audio_echo"
        android:textColor="@color/white"
        android:textSize="15sp" />
</LinearLayout>