<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/live_shape_basic_item_r14"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="24dp"
            android:text="@string/medialive_record_title"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/record_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/medialive_record_title"
            android:textColor="@color/white"
            android:textSize="15sp"
            tools:text="00:00" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/record_start"
            style="@style/LiveSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="24dp"
            android:text="@string/medialive_record_resolution"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/record_resolution"
            style="@style/LiveSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="24dp"
            android:text="@string/medialive_record_fps"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/record_fps"
            style="@style/LiveSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="24dp"
            android:text="@string/medialive_record_bitrate"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/record_bitrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/live_shape_edit_text_selector"
            android:inputType="numberDecimal"
            android:paddingHorizontal="8dp"
            android:paddingVertical="6dp"
            android:text="2000"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="kbps"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/group_screen_shot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="24dp"
            android:text="@string/medialive_screen_snapshot"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/screen_snapshot"
            style="@style/LiveButton.Settings.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:paddingVertical="4dp"
            android:text="@string/medialive_intercept"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>