<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/live_bg_gray_deep">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="0dp"
        tools:layout_constraintGuide_begin="44dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="0dp"
        tools:layout_constraintGuide_begin="44dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="0dp"
        tools:layout_constraintGuide_end="44dp" />

    <FrameLayout
        android:id="@+id/view_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/pic_action"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:gravity="center"
        android:text="@string/medialive_add_replace_remove"
        android:textAppearance="@style/LiveTextView.Action"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/info_panel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/net_state">

        <include
            android:id="@+id/medialive_cycle_info"
            layout="@layout/live_player_info_panel_single"
            android:layout_width="@dimen/pusher_info_panel_width"
            android:layout_height="@dimen/pusher_info_panel_height" />

        <include
            android:id="@+id/medialive_callback_info"
            layout="@layout/live_player_info_panel_multi"
            android:layout_width="@dimen/pusher_info_panel_width"
            android:layout_height="@dimen/pusher_info_panel_height"
            android:layout_marginTop="10dp" />
    </LinearLayout>

    <HorizontalScrollView
        android:id="@+id/tabs_scroll"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/close">

        <LinearLayout
            android:id="@+id/tabs"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp" />
    </HorizontalScrollView>

    <ImageView
        android:id="@+id/close"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:padding="12dp"
        android:src="@drawable/live_ic_close_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_top" />

    <LinearLayout
        android:id="@+id/preview_actions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@id/start_Live"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/preview_flip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/live_ic_camera" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/medialive_camera_flip"
                android:textAppearance="@style/LiveTextView.Action" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/preview_torch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/live_ic_torch" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/medialive_flash_light"
                android:textAppearance="@style/LiveTextView.Action" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/preview_effect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/live_ic_effect" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/medialive_effect"
                android:textAppearance="@style/LiveTextView.Action" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/preview_direction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/live_ic_orientation" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/medialive_landscape"
                android:textAppearance="@style/LiveTextView.Action" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/preview_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/live_ic_settings" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/settings"
                android:textAppearance="@style/LiveTextView.Action" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/start_Live"
        style="@style/LiveButton.BlueR"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:gravity="center"
        android:paddingVertical="10dp"
        android:text="@string/medialive_start_push"
        android:textAppearance="@style/LiveTextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_preview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="visible"
        app:constraint_referenced_ids="tabs_scroll, preview_actions, start_Live" />

    <ImageView
        android:id="@+id/net_state"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/live_ic_network_state"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/close" />

    <LinearLayout
        android:id="@+id/pushing_actions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="@dimen/pushing_actions_bottom"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline_end">

        <LinearLayout
            android:id="@+id/pushing_mic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/live_ic_mic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medialive_microphone"
                android:textAppearance="@style/LiveTextView.Action" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/pushing_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/live_ic_camera" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medialive_camera_flip"
                android:textAppearance="@style/LiveTextView.Action" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/pushing_torch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/live_ic_torch" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medialive_flash_light"
                android:textAppearance="@style/LiveTextView.Action" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/pushing_effect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/live_ic_effect" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medialive_effect"
                android:textAppearance="@style/LiveTextView.Action" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/pushing_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/live_ic_settings" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:textAppearance="@style/LiveTextView.Action" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/pushing_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/live_ic_info" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medialive_information"
                android:textAppearance="@style/LiveTextView.Action" />
        </LinearLayout>
    </LinearLayout>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_pushing"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:constraint_referenced_ids="net_state, pushing_actions"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>